fixed nav overflow for mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -221,3 +221,12 @@
 .animate-marquee:hover {
   animation-play-state: paused !important;
 }
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
